Fix annoying post gaps

--- a/src/userstyle.css
+++ b/src/userstyle.css
@@ -153,7 +153,6 @@ div.staffpixsmall img {
 	border: 1px solid #7B291B !important;
 }
 
-
 /* fix gaps */
 
 #hbot {
@@ -183,6 +182,11 @@ div.staffpixsmall img {
 
 .mainbodyinner>*:not(ul):not(ol) {
 	padding: 0.1875rem !important;
+}
+
+.mainbodyinner div.post {
+    margin: 0 !important;
+    padding: 0 !important;
 }
 
 footer {
